
CHANGES IN VERSION 0.99.3
------------------------

*Added clonalCommunity() function to allow for assignment and subsequent regression of feature space of groupings.

CHANGES IN VERSION 0.99.2
------------------------

* Added seed parameter to improve reproducibility 
* Added clone.proportion parameter to select for relative number of duplicates to allow into nearest neighbor evaluation
* New internal function neighbor.manager - nearest neighbor approximation is now based on clone proportion (for clones), the remaining neighbors are randomized across unique clones in the vicinity of the clonotype/cell in question. 
* Modified Mean approach for aa.property now references the correct columns in generating output frame and the cosine distance function
* Changed internal function parameters to prevent recursive issue.
* added aaReduction() and distReduction() functions to get intermediate values for a layer. 


CHANGES IN VERSION 0.99.1
------------------------

* Changed metric functions as it related to memory. Firstly, no more as.matrix() calls, this prevents upper ceiling on memory usage. 
* Now distance is computed and from each row, a normalized comparison is made using the method for near call, which is then converted and stored as an edge list. This eliminates 3 matrices - pairwise distance matrix, normalized distance matrix and the adjacency matrix. Based on some benchmarking, this is a reduction in memory of around 3 (matrices) x 50. 
*Edge list is now used to form multiplex graph object, with the list of edges across layers used to make supraAdjacency matrix.
* AAProperties distance calculated using cosine using the philanthropy package - this returns a distance object instead of a Pearson correlation-based pairwise matrix, saves time and memory
* Gene Usage Metrics return edge list directly, no intermediate adjacency matrix