@@ -3,6 +3,7 @@ CHANGES IN VERSION 0.99.3
 ------------------------
 
 *Added clonalCommunity() function to allow for assignment and subsequent regression of feature space of groupings.
+* Changed neighbor.manager. Reverted the nearest neighbor proximation to the original version which only randomizes clones. Threshold detection changed to use expand.grid() instead of looping through all barcodes. 
 
 CHANGES IN VERSION 0.99.2
 ------------------------
